[package]
name = "html_parse_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde_json = "1.0.40"
serde = {version = "1.0.94", features = ["derive"]}
diesel = {version = "1.4.0", features = ["postgres"]}
dotenv = "0.10"
reqwest = {version = "0.11", features = ["json"]}
futures = "0.3"
